--- a/Restaurant 3/index.html
+++ b/Restaurant 3/index.html
@@ -14,49 +14,88 @@ Most recent revision:
 		<!--Bootstrap CDN copied from https://getbootstrap.com/docs/4.1/getting-started/download/ -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		
+		<!--Font Awesome Icons copied from https://www.w3schools.com/bootstrap4/bootstrap_icons.asp -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+		
+		
+		<!--Font style sheet copied from https://fonts.google.com/specimen/Ma+Shan+Zheng -->
+		<link href="https://fonts.googleapis.com/css?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
+		
+		<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+		
 		<style>
-			#description {
-				width: 400px;
+			h1 {
+				font-family: 'Ma Shan Zheng', cursive;
+			}		
+			.centered {				
 				margin: auto;
 			}
-			a {
-				padding:10px;
+			.container-fluid {
+				background-color: #4287f5;				
 			}
-			div, #description {
-				background-color: #4287f5;
-				margin-color: #4287f5;
+			.pt-4 {
+			padding-top: ($spacer *1.5 )			
 			}
+			.pb-4 {
+			padding-bottom: ($spacer * 1.5)
+			}
+
 		</style>
 	</head>
 	<body>
 
-		<header>
+		<header class="jumbotron">
 		<h1>Luigi's Bistro</h1>
-		<link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
-		<style>			
-			
-		</style>		
+		<h3>We're excted to announce our new Long Beach location!</h3>
+		<noscript>
+			<h2 style="color: red;">
+				<br />Warning: This site is best viewed with JavaScript enabled
+			<h2>
+		</noscript>		
 		</header>
 		<hr />
 
 		<nav>
 			<p>
-				<a href="index.html">Home</a>
-				<a href="menu.html">Menu</a>
-				<a href="contact.html">Contact us</a>
+				<a class="btn badge-pill" href="index.html">
+					<span class="fas fa-home"></span>					
+				</a>
+				<a class="btn badge-pill" href="menu.html">Menu</a>
+				<a class="btn badge-pill" href="contact.html">Contact us</a>
 			</p>			
 		</nav>
 		<hr />
 		
-		<div>
-			<div style="text-align:center;">
-				<img src="images/restaurant-bar-counter.jpg" alt="Picture of Luigi's Bistro Interior" style="height:150px; width: 400px" />
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-4 pt-4" style="margin:auto;">					
+					<img src="images/restaurant-bar-counter.jpg" alt="Picture of Luigi's Bistro Interior" class="img-fluid" style="height:150px; width: 400px;" />
+				</div>	
 			</div>
-			<section id="description">			
-				<p>Restaurant Description<br />
-					Located in the quiet suburbs of Cypress, Luigi's Bistro offers an escape to the simple comfort foods of America's classic diners. Our menu consists only the tastiest sandwiches made with the freshest ingredients and come with our delicious sides. Take some time to relax and unwind in our modern decor with ample floor space for large parties. We take pride in the work we put into our dining experience. Be sure to come try it yourself!
-				</p>
-			</section>
+			<div class="row">			
+				<div class="col-4 centered pt-4">
+					<div style="width:400px;">
+						Located in the quiet suburbs of Cypress, Luigi's Bistro offers an escape to the simple comfort foods of America's classic diners. Our menu consists only the tastiest sandwiches made with the freshest ingredients and come with our delicious sides. Take some time to relax and unwind in our modern decor with ample floor space for large parties. We take pride in the work we put into our dining experience. Be sure to come try it yourself!
+					</div>	
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-4 centered pt-4 pb-4">
+					<div id="carousel" class="carousel slide" data-ride="carousel">
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-400px" src="images/newLocation.jpg" alt="New Location">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-400px" src="images/seasonalMenu.jpg" alt="Seasonal Menu">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-400px" src="images/drinkMonth.jpg" alt="Drink of the Month">
+							</div>
+						</div>
+					</div>
+				</div>	
+			</div>
 		</div>
 		<hr />
 		<footer>
@@ -69,5 +108,7 @@ Most recent revision:
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		
+		 <script src="scripts/contact.js"></script>
+		 
 	</body>
 </html>
