Fixed carousel resizing on Restaurant index

--- a/Restaurant 3/index.html
+++ b/Restaurant 3/index.html
@@ -84,13 +84,13 @@ Most recent revision:
 					<div id="carousel" class="carousel slide" data-ride="carousel">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
-								<img class="d-block w-400px" src="images/newLocation.jpg" alt="New Location">
+								<img class="d-block img-fluid" src="images/newLocation.jpg" alt="New Location">
 							</div>
 							<div class="carousel-item">
-								<img class="d-block w-400px" src="images/seasonalMenu.jpg" alt="Seasonal Menu">
+								<img class="d-block img-fluid" src="images/seasonalMenu.jpg" alt="Seasonal Menu">
 							</div>
 							<div class="carousel-item">
-								<img class="d-block w-400px" src="images/drinkMonth.jpg" alt="Drink of the Month">
+								<img class="d-block img-fluid" src="images/drinkMonth.jpg" alt="Drink of the Month">
 							</div>
 						</div>
 					</div>
